--- a/SimpleProject2/templates/index.html
+++ b/SimpleProject2/templates/index.html
@@ -3,17 +3,17 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h1>Добро пожаловать на сайт отзывов о ресторанах!</h1>
-    <p>Здесь вы можете добавлять, просматривать и оценивать рестораны.</p>
+    <h1>Laipni lūdzam restorānu atsauksmju vietnē!</h1>
+    <p>Šeit varat pievienot, skatīt un novērtēt restorānus.</p>
 
 
-    <h2>Список ресторанов</h2>
+    <h2>Restorānu saraksts</h2>
     <ul class="list-group">
         {% for restaurant in restaurants %}
             <li class="list-group-item">
                 <strong>{{ restaurant.name }}</strong><br>
-                Адрес: {{ restaurant.address }}<br>
-                <a href="{{ url_for('view_restaurant', restaurant_name=restaurant.name) }}" class="btn btn-primary btn-sm mt-2">Посмотреть</a>
+                Adrese: {{ restaurant.address }}<br>
+                <a href="{{ url_for('view_restaurant', restaurant_name=restaurant.name) }}" class="btn btn-primary btn-sm mt-2">Paskatīties</a>
             </li>
         {% endfor %}
     </ul>
